--- a/Source/iOS/DolphiniOS/DolphiniOS/control.in
+++ b/Source/iOS/DolphiniOS/DolphiniOS/control.in
@@ -4,7 +4,7 @@ Version: VERSION_NUMBER
 Architecture: iphoneos-arm
 Description: A GameCube and Wii emulator for iOS
 Homepage: https://oatmealdome.me/
-Depiction: https://cydia.oatmealdome.me/depictions/?p=me.oatmealdome.DolphiniOS
+Depiction: https://cydia.oatmealdome.me/depictions/?p=me.oatmealdome.dolphinios
 Maintainer: OatmealDome <julian@oatmealdome.me>
 Author: OatmealDome <julian@oatmealdome.me>
 Sponsor: OatmealDome's Patrons <https://patreon.com/oatmealdome>
