--- a/Source/iOS/DolphiniOS/DolphiniOS/Entitlements_JB.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/Entitlements_JB.plist
@@ -14,6 +14,7 @@
 	<array>
 		<string>/private/var/mobile/Documents/DolphiniOS/</string>
 		<string>/Library/LaunchDaemons/</string>
+		<string>/usr/lib/</string>
 	</array>
 	<key>seatbelt-profiles</key>
 	<array>
