--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control-patreon.in
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control-patreon.in
@@ -1,5 +1,5 @@
 Package: me.oatmealdome.dolphinios-patreon-beta
-Name: DolphiniOS
+Name: DolphiniOS (Patreon Beta)
 Version: VERSION_NUMBER
 Architecture: iphoneos-arm
 Description: A GameCube and Wii emulator for iOS
