--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control.in
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control.in
@@ -9,3 +9,4 @@ Maintainer: OatmealDome <julian@oatmealdome.me>
 Author: OatmealDome <julian@oatmealdome.me>
 Sponsor: OatmealDome's Patrons <https://patreon.com/oatmealdome>
 Section: Games
+Conflicts: me.oatmealdome.dolphinios-patreon-beta
