--- a/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiGCPadProfile.ini
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BundleResources/MFiGCPadProfile.ini
@@ -2,10 +2,10 @@
 Device = MFi/9/Dummy
 Buttons/A = `Button A`
 Buttons/B = `Button B`
-Buttons/Start = `R Shoulder`
+Buttons/Start = `L Shoulder`
 Buttons/X = `Button X`
 Buttons/Y = `Button Y`
-Buttons/Z = `L Shoulder`
+Buttons/Z = `R Shoulder`
 D-Pad/Up = `D-Pad Up`
 D-Pad/Down = `D-Pad Down`
 D-Pad/Left = `D-Pad Left`
