--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control-patreon.in
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control-patreon.in
@@ -9,5 +9,5 @@ Maintainer: OatmealDome <julian@oatmealdome.me>
 Author: OatmealDome <julian@oatmealdome.me>
 Sponsor: OatmealDome's Patrons <https://patreon.com/oatmealdome>
 Section: Games
-Depends: mobilesubstrate
-Conflicts: me.oatmealdome.dolphinios
+Depends: me.oatmealdome.csdbgd
+Conflicts: me.oatmealdome.dolphinios (<= 2.0.2-3)
