--- a/Source/iOS/DolphiniOS/Podfile
+++ b/Source/iOS/DolphiniOS/Podfile
@@ -1,12 +1,6 @@
 platform :ios, '12.0'
 
-plugin 'cocoapods-keys', {
-  :project => "DolphiniOS",
-  :keys => [
-    "AppCenterSecret"
-  ]
-}
-
 target 'DolphiniOS' do
-    pod 'AppCenter'
+    pod 'Firebase/Analytics'
+    pod 'Firebase/Crashlytics'
 end
