--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -24,5 +24,7 @@
 	<integer>0</integer>
 	<key>crash_reporting_enabled</key>
 	<true/>
+	<key>software_list_view</key>
+	<integer>0</integer>
 </dict>
 </plist>
