--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -26,5 +26,7 @@
 	<integer>0</integer>
 	<key>top_bar_pull_down_mode</key>
 	<integer>0</integer>
+	<key>last_version</key>
+	<string>dummy</string>
 </dict>
 </plist>
