--- a/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
+++ b/Source/iOS/DolphiniOS/DolphiniOS/DefaultPreferences.plist
@@ -37,5 +37,7 @@
 	<false/>
 	<key>killed_url</key>
 	<string>https://dolphinios.oatmealdome.me/update</string>
+	<key>aprr_jit_on</key>
+	<false/>
 </dict>
 </plist>
