--- a/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control.in
+++ b/Source/iOS/DolphiniOS/DolphiniOS/BuildResources/DebFiles/control.in
@@ -9,5 +9,5 @@ Maintainer: OatmealDome <julian@oatmealdome.me>
 Author: OatmealDome <julian@oatmealdome.me>
 Sponsor: OatmealDome's Patrons <https://patreon.com/oatmealdome>
 Section: Games
-Depends: me.oatmealdome.csdbgd
+Depends: me.oatmealdome.csdbgd, mobilesubstrate
 Conflicts: me.oatmealdome.dolphinios-patreon-beta (<= 2.1.0-230)
