--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Build test
       run: |
         cd Source/iOS/DolphiniOS
+        xcodebuild -workspace DolphiniOS.xcworkspace -list
         xcodebuild -workspace DolphiniOS.xcworkspace -scheme "DolphiniOS (Jailbroken)" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED="NO"
     
     - name: tmate
