--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ ios-jb ]
@@ -15,12 +11,11 @@ jobs:
     runs-on: macos-10.15
     
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
     
     - name: Install build utilities
       run: |
-        brew install ninja bartycrouch s3cmd
+        brew install ninja bartycrouch dpkg s3cmd
         pip3 install polib
         
     - name: Create Keychain
