--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,7 @@ jobs:
         BUILD_FOR_PATREON: "NO"
         IS_CI: "YES"
       run: |
+        echo ::set-env name=MARKETING_VERSION::$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "${{ env.PROJECT_DIR }}/DolphiniOS/Info.plist")
         mkdir -p ${{ env.ARCHIVE_PATH }}/Products/Applications/
         cp -R "${{ github.workspace }}/build-Xcode/Release (Jailbroken)-iphoneos/DolphiniOS.app" ${{ env.ARCHIVE_PATH }}/Products/Applications/
         Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildDebs.sh build.keychain
