--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,8 +64,7 @@ jobs:
         echo ::set-env name=MARKETING_VERSION::$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "${{ env.PROJECT_DIR }}/DolphiniOS/Info.plist")
         mkdir -p ${{ env.ARCHIVE_PATH }}/Products/Applications/
         cp -R "${{ github.workspace }}/build-Xcode/Release (Jailbroken)-iphoneos/DolphiniOS.app" ${{ env.ARCHIVE_PATH }}/Products/Applications/
-        Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildDebs.sh build.keychain
-        echo ::set-env name=JB_DEB_PATH::${{ env.DEB_PATH }}
+        Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildDebs.sh build.keychain JB_DEB_PATH
         
     - name: Upload
       env:
