--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ ios-jb ]
 
 jobs:
-  build:
+  build-jb:
     runs-on: macos-10.15
     
     steps:
@@ -49,23 +49,85 @@ jobs:
       run: |
         mkdir build-Xcode
         cd Source/iOS/DolphiniOS
-        #xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Jailbroken)" -scheme "DolphiniOS" ${{ env.XCODEBUILD_ARGS }}
-        #xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Patreon)" -scheme "DolphiniOS" ${{ env.XCODEBUILD_ARGS }}
-        xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Non-Jailbroken)" -scheme "DolphiniOS" ${{ env.XCODEBUILD_ARGS }}
-        #xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Patreon Non-Jailbroken)" -scheme "DolphiniOS" {{ env.XCODEBUILD_ARGS }}    
+        xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Jailbroken)" -scheme "DolphiniOS" ${{ env.XCODEBUILD_ARGS }}
+        xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Patreon)" -scheme "DolphiniOS" ${{ env.XCODEBUILD_ARGS }}   
       
-    #- name: Package (JB)
-    #  env:
-    #    PROJECT_DIR: "${{ github.workspace }}/Source/iOS/DolphiniOS"
-    #    ARCHIVE_PATH: "${{ github.workspace }}/build-Xcode/archive-root-jb"
-    #    BUILD_FOR_PATREON: "NO"
-    #    IS_CI: "YES"
-    #  run: |
-    #    mkdir -p ${{ env.ARCHIVE_PATH }}/Products/Applications/
-    #    cp -R "${{ github.workspace }}/build-Xcode/Release (Jailbroken)-iphoneos/DolphiniOS.app" ${{ env.ARCHIVE_PATH }}/Products/Applications/
-    #    Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildDebs.sh build.keychain JB_DEB_PATH
+    - name: Package (Normal)
+      env:
+        PROJECT_DIR: "${{ github.workspace }}/Source/iOS/DolphiniOS"
+        ARCHIVE_PATH: "${{ github.workspace }}/build-Xcode/archive-root-jb"
+        BUILD_FOR_PATREON: "NO"
+        IS_CI: "YES"
+      run: |
+        mkdir -p ${{ env.ARCHIVE_PATH }}/Products/Applications/
+        cp -R "${{ github.workspace }}/build-Xcode/Release (Jailbroken)-iphoneos/DolphiniOS.app" ${{ env.ARCHIVE_PATH }}/Products/Applications/
+        Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildDebs.sh build.keychain JB_DEB_PATH
         
-    - name: Package (NJB)
+    - name: Package (Patreon)
+      env:
+        PROJECT_DIR: "${{ github.workspace }}/Source/iOS/DolphiniOS"
+        ARCHIVE_PATH: "${{ github.workspace }}/build-Xcode/archive-root-jb-patreon"
+        BUILD_FOR_PATREON: "YES"
+        IS_CI: "YES"
+      run: |
+        mkdir -p ${{ env.ARCHIVE_PATH }}/Products/Applications/
+        cp -R "${{ github.workspace }}/build-Xcode/Release (Patreon)-iphoneos/DolphiniOS.app" ${{ env.ARCHIVE_PATH }}/Products/Applications/
+        Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildDebs.sh build.keychain JB_PATREON_DEB_PATH
+        
+    - name: Upload
+      env:
+        S3CMD_ARGS: "--access_key=${{ secrets.SPACES_KEY }} --secret_key=${{ secrets.SPACES_SECRET }} --host=${{ secrets.SPACES_ENDPOINT }} --host-bucket=%\\(bucket\\)s.${{ secrets.SPACES_ENDPOINT }}"
+        BUCKET_ROOT_PATH: "s3://wii-sports/dolphinios/ci"
+      run: |
+        s3cmd put ${{ env.JB_DEB_PATH }}/DolphiniOS.deb ${{ env.BUCKET_ROOT_PATH }}/DolphiniOS-JB-${{ github.run_number }}.deb ${{ env.S3CMD_ARGS }}
+        s3cmd put ${{ env.JB_PATREON_DEB_PATH }}/DolphiniOS.deb ${{ env.BUCKET_ROOT_PATH }}/DolphiniOS-JB-Patreon-${{ github.run_number }}.deb ${{ env.S3CMD_ARGS }}
+  
+  build-njb:
+    runs-on: macos-10.15
+    
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: Install build utilities
+      run: |
+        brew install ninja bartycrouch dpkg s3cmd libmagic
+        pip3 install polib python-magic
+        
+    - name: Create Keychain
+      run: |
+        security create-keychain -p alpine build.keychain
+        security default-keychain -s build.keychain
+        security unlock-keychain -p alpine build.keychain
+        security set-keychain-settings -t 36000 build.keychain
+        security import Source/iOS/DolphiniOS/DolphiniOS/BuildResources/OatmealDomeSoftware.p12 -k build.keychain -P ${{ secrets.CERTIFICATE_GPG_PASSWORD }} -A
+        security set-key-partition-list -S apple-tool:,apple: -s -k alpine build.keychain
+        
+    - name: Decrypt Firebase Property List
+      run: |
+        cd Source/iOS/DolphiniOS/DolphiniOS
+        gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.FIREBASE_GPG_PASSWORD }}" --output GoogleService-Info.plist GoogleService-Info.plist.gpg
+    
+    - name: Cache CocoaPods
+      uses: actions/cache@v1
+      with:
+        path: Source/iOS/DolphiniOS/Pods
+        key: ${{ runner.OS }}-pods-cache-${{ hashFiles('**/Source/iOS/DolphiniOS/Podfile.lock') }}
+    
+    - name: Run CocoaPods
+      run: |
+        cd Source/iOS/DolphiniOS
+        pod install
+      
+    - name: Build
+      env:
+        XCODEBUILD_ARGS: "BUILD_DIR=${{ github.workspace }}/build-Xcode CODE_SIGNING_ALLOWED=\"NO\" CODE_SIGNING_REQUIRED=\"NO\" CODE_SIGN_ENTITLEMENTS=\"\" CODE_SIGN_IDENTITY=\"\"" 
+      run: |
+        mkdir build-Xcode
+        cd Source/iOS/DolphiniOS
+        xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Non-Jailbroken)" -scheme "DolphiniOS" ${{ env.XCODEBUILD_ARGS }}
+        xcodebuild -workspace DolphiniOS.xcworkspace -configuration "Release (Patreon Non-Jailbroken)" -scheme "DolphiniOS" {{ env.XCODEBUILD_ARGS }}    
+        
+    - name: Package (Normal)
       env:
         PROJECT_DIR: "${{ github.workspace }}/Source/iOS/DolphiniOS"
         ARCHIVE_PATH: "${{ github.workspace }}/build-Xcode/archive-root-njb"
@@ -75,11 +137,22 @@ jobs:
         mkdir -p ${{ env.ARCHIVE_PATH }}/Products/Applications/
         cp -R "${{ github.workspace }}/build-Xcode/Release (Non-Jailbroken)-iphoneos/DolphiniOS.app" ${{ env.ARCHIVE_PATH }}/Products/Applications/
         Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildIpa.sh build.keychain NJB_IPA_PATH
+    
+    - name: Package (Patreon)
+      env:
+        PROJECT_DIR: "${{ github.workspace }}/Source/iOS/DolphiniOS"
+        ARCHIVE_PATH: "${{ github.workspace }}/build-Xcode/archive-root-njb-patreon"
+        BUILD_FOR_PATREON: "YES"
+        IS_CI: "YES"
+      run: |
+        mkdir -p ${{ env.ARCHIVE_PATH }}/Products/Applications/
+        cp -R "${{ github.workspace }}/build-Xcode/Release (Patreon Non-Jailbroken)-iphoneos/DolphiniOS.app" ${{ env.ARCHIVE_PATH }}/Products/Applications/
+        Source/iOS/DolphiniOS/DolphiniOS/BuildResources/BuildScripts/BuildIpa.sh build.keychain NJB_PATREON_IPA_PATH
         
     - name: Upload
       env:
         S3CMD_ARGS: "--access_key=${{ secrets.SPACES_KEY }} --secret_key=${{ secrets.SPACES_SECRET }} --host=${{ secrets.SPACES_ENDPOINT }} --host-bucket=%\\(bucket\\)s.${{ secrets.SPACES_ENDPOINT }}"
         BUCKET_ROOT_PATH: "s3://wii-sports/dolphinios/ci"
       run: |
-        #s3cmd put ${{ env.JB_DEB_PATH }}/DolphiniOS.deb ${{ env.BUCKET_ROOT_PATH }}/DolphiniOS-JB-${{ github.run_number }}.deb ${{ env.S3CMD_ARGS }}
         s3cmd put ${{ env.NJB_IPA_PATH }}/DolphiniOS-NJB.ipa ${{ env.BUCKET_ROOT_PATH }}/DolphiniOS-NJB-${{ github.run_number }}.ipa ${{ env.S3CMD_ARGS }}
+        s3cmd put ${{ env.NJB_PATREON_IPA_PATH }}/DolphiniOS-NJB.ipa ${{ env.BUCKET_ROOT_PATH }}/DolphiniOS-NJB-Patreon-${{ github.run_number }}.ipa ${{ env.S3CMD_ARGS }}
